--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+body{
+  background-color: #0a3642;
+}
+
 .App {
   text-align: center;
-  background-color: #0a3642;
+  
   height: max-content;
   margin-top: 10px;
 }
@@ -18,9 +22,9 @@
 .App-header {
   background-color: rgb(232, 233, 232);
   margin-top: 20px;
-
+padding: 5px;
   text-align: start;
-
+border-radius: 5px;
   font-size: calc(10px + 2vmin);
   color: rgb(19, 18, 18);
 }
